<resources>
    <string name="app_name">Lumplet</string>
    <string name="logo_outletu_lumplet">Logo outletu Lumplet</string>
    <string name="opis_produktu">Opis Produktu</string>
    <string name="cena_0_00">Cena: $0.00</string>
    <string name="kategoria_produkt">Kategoria: Produkt</string>
    <string name="dodaj_do_koszyka">Dodaj do koszyka</string>
    <string name="email">E-mail</string>
    <string name="password">Hasło</string>
    <string name="login">Zaloguj się</string>
    <string name="register">Zarejestruj się</string>
    <string name="description_icon_user">Login</string>
    <string name="google_login">Zaloguj przez Google</string>
    <string name="description_icon_cart">Koszyk</string>
    <string name="imie">Imię</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="adres">Adres</string>
    <string name="potwierd_zam_wienie">Potwierdź zamówienie</string>
    <string name="dane_do_wysy_ki">Dane do wysyłki</string>
    <string name="miasto">Miasto</string>
    <string name="kod_pocztowy">Kod pocztowy</string>
    <string name="ulica">Ulica</string>
    <string name="name">Name</string>
    <string name="filter">Filter</string>
    <string name="_5000">5000</string>
    <string name="price">Price</string>
    <string name="nazwa_kategorii">Nazwa Kategorii</string>
</resources>