<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!-- ImageView do wyświetlenia zdjęcia produktu -->
    <TextView
        android:id="@+id/productNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nazwa Produktu"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/productImageView"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:contentDescription="Product Image"
        android:scaleType="centerCrop" />


    <!-- TextView do wyświetlenia nazwy produktu -->

    <!-- TextView do wyświetlenia opisu produktu -->
    <TextView
        android:id="@+id/productDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opis_produktu"
        android:textSize="16sp" />

    <!-- TextView do wyświetlenia ceny produktu -->

    <TextView
        android:id="@+id/productPriceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cena_0_00"
        android:textSize="20sp" />

    <!-- TextView do wyświetlenia kategorii produktu -->
    <TextView
        android:id="@+id/productCategoryTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kategoria_produkt"
        android:textSize="18sp" />

    <!-- Przycisk "Dodaj do koszyka" -->
    <Button
        android:id="@+id/addToCartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dodaj_do_koszyka" />
</LinearLayout>
